--- a/index.html
+++ b/index.html
@@ -4,23 +4,24 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Main</title>
+    <link rel="stylesheet" href="style.css">
     <style>p{max-width: 720px;}</style>
   </head>
   <body>
     <nav>
-        <a href="#">Main</a>
-        <a href="catalog/catalog.html">Catalog</a>
-        <a href="contacts.html">Contacts</a>
+        <a href="#" class="menu_item">Main</a>
+        <a href="catalog/catalog.html" class="menu_item">Catalog</a>
+        <a href="contacts.html" class="menu_item">Contacts</a>
     </nav>
-    <h1>Main page</h1>
-    <p>
+    <h1 class="main_title">Main page</h1>
+    <p class="text">
       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae illum
       quibusdam quidem accusantium aliquid iste? Nam, blanditiis. Exercitationem
       totam corporis officiis cum recusandae expedita, quam iusto provident
       dignissimos temporibus maiores.
     </p>
-    <h2>Welcome to the site</h2>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo, deleniti.</p>
+    <h2 class="title">Welcome to the site</h2>
+    <p class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo, deleniti.</p>
 
   </body>
 </html>
