--- a/catalog/catalog.html
+++ b/catalog/catalog.html
@@ -4,16 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Catalog</title>
-    <style>p{max-width: 720px;}</style>
+    <link rel="stylesheet" href="../style.css" />
+    <style>
+      p {
+        max-width: 720px;
+      }
+    </style>
   </head>
   <body>
     <nav>
-      <a href="../index.html">Main</a>
-      <a href="catalog.html">Catalog</a>
-      <a href="../contacts.html">Contacts</a>
+      <a href="../index.html" class="menu_item">Main</a>
+      <a href="catalog.html" class="menu_item">Catalog</a>
+      <a href="../contacts.html" class="menu_item">Contacts</a>
     </nav>
-    <h1>Catalog</h1>
-    <p>
+    <h1 class="main_title">Catalog</h1>
+    <p class="text">
       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis
       recusandae, quam repellat, ullam nesciunt esse consequatur cum illum unde
       maxime ab molestiae at, deserunt molestias enim fuga modi? Quaerat nobis
@@ -32,8 +37,8 @@
       eligendi alias quibusdam voluptatibus a, at corporis? Obcaecati.
     </p>
     <img src="../img/croissants.jpg" alt="croissant" width="320px" />
-    <h2>Croissant</h2>
-    <p>
+    <h2 class="title">Croissant</h2>
+    <p class="text">
       Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates ex
       odit ratione quos sunt quisquam porro iusto natus placeat vero alias
       expedita veritatis molestiae eligendi quis nostrum quam nisi, dolor
@@ -41,8 +46,8 @@
       corrupti at?
     </p>
     <img src="../img/burger.jpg" alt="burger" width="320px" />
-    <h2>Burger</h2>
-    <p>
+    <h2 class="title">Burger</h2>
+    <p class="text">
       Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates ex
       odit ratione quos sunt quisquam porro iusto natus placeat vero alias
       expedita veritatis molestiae eligendi quis nostrum quam nisi, dolor
@@ -50,8 +55,8 @@
       corrupti at?
     </p>
     <img src="../img/pizza.jpg" alt="pizza" width="320px" />
-    <h2>Pizza</h2>
-    <p>
+    <h2 class="title">Pizza</h2>
+    <p class="text">
       Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates ex
       odit ratione quos sunt quisquam porro iusto natus placeat vero alias
       expedita veritatis molestiae eligendi quis nostrum quam nisi, dolor
