--- a/contacts.html
+++ b/contacts.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
     <style>p{max-width: 720px;}</style>
 </head>
 <body>
     <nav>
-        <a href="index.html">Main</a>
-        <a href="catalog/catalog.html">Catalog</a>
-        <a href="contacts.html">Contacts</a>
+        <a href="index.html" class="menu_item">Main</a>
+        <a href="catalog/catalog.html" class="menu_item">Catalog</a>
+        <a href="contacts.html" class="menu_item">Contacts</a>
     </nav>
 </body>
 </html>
